feat: :sparkles: my-section

--- a/components/my-header.html
+++ b/components/my-header.html
@@ -1,5 +1,5 @@
-<header class="header">
-    <h1>Hola mundo</h1>
+<header>
+    <h1>SOY EL HEADER</h1>
 </header>
 
 <style>
@@ -7,15 +7,15 @@
         margin: 0;
         padding: 0;
     }
-    .header{
+    header{
         display: flex;
         justify-content: center;
         align-items: center;
-        width: auto;
+        width: 100vw;
+        height: 10vh;
+        background-color: brown;
     }
     h1{
-        background-color: brown;
-        width: 100%;
         text-align: center;
     }
 </style>
