--- a/components/my-header.html
+++ b/components/my-header.html
@@ -1,5 +1,6 @@
 <header>
     <h1>SOY EL HEADER</h1>
+    <button class="btn" type="button" value="Boton">BOTON</button>
 </header>
 
 <style>
@@ -11,11 +12,19 @@
         display: flex;
         justify-content: center;
         align-items: center;
+        flex-direction: column;
         width: 100vw;
         height: 10vh;
         background-color: brown;
     }
     h1{
         text-align: center;
+    }
+    button {
+        width: 100px;
+        height: 20px;
+        background-color: bisque;
+        border: 1px solid;
+        border-radius: 10%;
     }
 </style>
