--- a/components/my-header.html
+++ b/components/my-header.html
@@ -21,6 +21,7 @@
         text-align: center;
     }
     button {
+        margin-top: 10;
         width: 100px;
         height: 20px;
         background-color: bisque;
