--- a/components/my-section.html
+++ b/components/my-section.html
@@ -1,5 +1,6 @@
 <section>
     <h2>SOY LA SECTION</h2>
+    <button class="btn" type="button" value="Boton 2">BOTON 2</button>
 </section>
 <style>
     *{
@@ -10,9 +11,18 @@
         display: flex;
         justify-content: center;
         align-items: center;
+        flex-direction: column;
         margin-top: 40px;
         width: 65vw;
         height: 50vh;
         background-color: aqua;
+    }
+    button{
+        margin-top: 10px;
+        width: 100px;
+        height: 20px;
+        background-color: bisque;
+        border: 1px solid;
+        border-radius: 10%;
     }
 </style>
