feat: :sparkles: handleEvent, nav, selection

--- a/components/my-nav.html
+++ b/components/my-nav.html
@@ -1,5 +1,6 @@
 <nav>
     <h2>SOY EL NAV</h2>
+    <button class="btn" value="Boton 3">BOTON 3</button>
 </nav>
 <style>
     *{
@@ -10,9 +11,18 @@
         display: flex;
         justify-content: center;
         align-items: center;
+        flex-direction: column;
         margin-top: 20px;
         width: 31vw;
         height: 70vh;
         background-color: red;
+    }
+    button{
+        margin-top: 10px;
+        width: 100px;
+        height: 20px;
+        background-color: bisque;
+        border: 1px solid;
+        border-radius: 10%;
     }
 </style>
