--- a/components/my-selection.html
+++ b/components/my-selection.html
@@ -6,6 +6,7 @@
         <div class="circle"></div>
         <div class="circle"></div>
     </div>
+    <button class="btn" value="Boton 4">BOTON 4</button>
 </article>
 
 <style>
@@ -20,6 +21,7 @@
         display: flex;
         justify-content: center;
         align-items: center;
+        flex-direction: column;
     }
     .circulos{
         display: flex;
@@ -30,7 +32,15 @@
     .circle {
         background: lightblue;
         border-radius: 50%;
+        width: 80px;
+        height: 80px;
+    }
+    button{
+        margin-top: 10px;
         width: 100px;
-        height: 100px;
+        height: 20px;
+        background-color: bisque;
+        border: 1px solid;
+        border-radius: 10%;
     }
 </style>
