feat: :sparkles: handleEvent, footer

--- a/components/my-footer.html
+++ b/components/my-footer.html
@@ -1,5 +1,6 @@
 <footer>
     <h2>SOY EL FOOTER</h2>
+    <button class="btn" value="Boton 5">BOTON 5</button>
 </footer>
 
 <style>
@@ -15,8 +16,17 @@
         display: flex;
         justify-content: center;
         align-items: center;
+        flex-direction: column;
     }
     h2{
         text-align: center;
+    }
+    button{
+        margin-top: 10px;
+        width: 100px;
+        height: 20px;
+        background-color: bisque;
+        border: 1px solid;
+        border-radius: 10%;
     }
 </style>
